==> Laurenceb/Dactyl/Util/RF22/RF22.cpp <==
#include "RF22.h"

boolean RF22::init()
{	
    // Wait for RF22 POR (up to 16msec)
//    delay(16);Note: this assumes we have taken some time to get here from POR

    // Initialise the slave select pin
//    pinMode(_slaveSelectPin, OUTPUT);
//    digitalWrite(_slaveSelectPin, HIGH);
  
    // start the SPI library:
    // Note the RF22 wants mode 0, MSB first and default to 1 Mbps
//    SPI.begin();
//    SPI.setDataMode(SPI_MODE0);
//    SPI.setBitOrder(MSBFIRST);
//    SPI.setClockDivider(SPI_CLOCK_DIV16);  // (16 Mhz / 16) = 1 MHz

    // Software reset the device
    reset();

    // Get the device type and check it
    // This also tests whether we are really connected to a device
    _deviceType = spiRead(RF22_REG_00_DEVICE_TYPE);
    if (   _deviceType != RF22_DEVICE_TYPE_RX_TRX
        && _deviceType != RF22_DEVICE_TYPE_TX)
	return false;
/*
	// Set up interrupt handler
    if (_interrupt == 0)
    {
	_RF22ForInterrupt[0] = this;
	attachInterrupt(0, RF22::isr0, LOW);  
    }
    else if (_interrupt == 1)
    {
	_RF22ForInterrupt[1] = this;
	attachInterrupt(1, RF22::isr1, LOW);  
    }
    else
	return false;
*/
    clearTxBuf();
    clearRxBuf();
  
    // Most of these are the POR default
    spiWrite(RF22_REG_7D_TX_FIFO_CONTROL2, RF22_TXFFAEM_THRESHOLD);
    spiWrite(RF22_REG_7E_RX_FIFO_CONTROL,  RF22_RXFFAFULL_THRESHOLD);
    spiWrite(RF22_REG_30_DATA_ACCESS_CONTROL, RF22_ENPACRX | RF22_ENPACTX | RF22_ENCRC | RF22_CRC_CRC_16_IBM);
    // Configure the message headers
    // Here we set up the standard packet format for use by the RF22 library
    // 8 nibbles preamble
    // 2 SYNC words 2d, d4
    // Header length 4 (to, from, id, flags)
    // 1 octet of data length (0 to 255)
    // 0 to 255 octets data
    // 2 CRC octets as CRC16(IBM), computed on the header, length and data
    // On reception the to address is check for validity against RF22_REG_3F_CHECK_HEADER3
    // or the broadcast address of 0xff
    // If no changes are made after this, the transmitted
    // to address will be 0xff, the from address will be 0xff
    // and all such messages will be accepted. This permits the out-of the box
    // RF22 config to act as an unaddresed, unreliable datagram service
    spiWrite(RF22_REG_32_HEADER_CONTROL1, RF22_BCEN_HEADER3 | RF22_HDCH_HEADER3);
    spiWrite(RF22_REG_33_HEADER_CONTROL2, RF22_HDLEN_4 | RF22_SYNCLEN_2);
    setPreambleLength(8);
    uint8_t syncwords[] = { 0x2d, 0xd4 };
    setSyncWords(syncwords, sizeof(syncwords));
    setPromiscuous(false); 
    // Check the TO header against RF22_DEFAULT_NODE_ADDRESS
    spiWrite(RF22_REG_3F_CHECK_HEADER3, RF22_DEFAULT_NODE_ADDRESS);
    // Set the default transmit header values
    setHeaderTo(RF22_DEFAULT_NODE_ADDRESS);
    setHeaderFrom(RF22_DEFAULT_NODE_ADDRESS);
    setHeaderId(0);
    setHeaderFlags(0);

    // Ensure the antenna can be switched automatically according to transmit and receive
    // This assumes GPIO0(out) is connected to TX_ANT(in) to enable tx antenna during transmit
    // This assumes GPIO2(out) is connected to RX_ANT(in) to enable rx antenna during receive
    spiWrite (RF22_REG_0B_GPIO_CONFIGURATION0, 0x12) ; // TX state
    spiWrite (RF22_REG_0D_GPIO_CONFIGURATION2, 0x15) ; // RX state

    // Enable interrupts	SPI_I2S_SendData(SPI_RF22, out);
    spiWrite(RF22_REG_05_INTERRUPT_ENABLE1, RF22_ENTXFFAEM | RF22_ENRXFFAFULL | RF22_ENPKSENT | RF22_ENPKVALID | RF22_ENCRCERROR | RF22_ENFFERR);
    spiWrite(RF22_REG_06_INTERRUPT_ENABLE2, RF22_ENPREAVAL);

    // Set some defaults. An innocuous ISM frequency
    setFrequency(OPERATING_FREQUENCY);
//    setFrequency(900.0);
    // Some slow, reliable default speed and modulation
    setModemConfig(FSK_Rb2_4Fd36);
//    setModemConfig(FSK_Rb125Fd125);
    // Minimum power
    setTxPower(RF22_TXPOW_1DBM);
//    setTxPower(RF22_TXPOW_17DBM);

    return true;
}

uint8_t RF22::spiRead(uint8_t reg)
{
    Set_Si4432_Nsel(Bit_RESET);
    SPI_I2S_SendData(SPI_RF22, reg & ~RF22_SPI_WRITE_MASK);// Send the address with the write mask off
    /* Wait to receive a byte */
    while (SPI_I2S_GetFlagStatus(SPI_RF22, SPI_I2S_FLAG_RXNE) == RESET) { ; }
    /* Return the byte read from the SPI bus */
    SPI_I2S_ReceiveData(SPI_RF22);
    SPI_I2S_SendData(SPI_RF22, 0x00);// Send 0x00
    /* Wait to receive a byte */
    while (SPI_I2S_GetFlagStatus(SPI_RF22, SPI_I2S_FLAG_RXNE) == RESET) { ; }
    /* Return the byte read from the SPI bus */
    uint8_t val = SPI_I2S_ReceiveData(SPI_RF22);// The written value is ignored, reg value is read 
    Set_Si4432_Nsel(Bit_SET);
    return val;
}

void RF22::spiWrite(uint8_t reg, uint8_t val)
{
    Set_Si4432_Nsel(Bit_RESET);
    SPI_I2S_SendData(SPI_RF22, reg | RF22_SPI_WRITE_MASK);// Send the address with the write mask on
    /* Wait to receive a byte */
    while (SPI_I2S_GetFlagStatus(SPI_RF22, SPI_I2S_FLAG_RXNE) == RESET) { ; }
    /* Return the byte read from the SPI bus */
    SPI_I2S_ReceiveData(SPI_RF22);//dummy read
    SPI_I2S_SendData(SPI_RF22, val);// Send val
    /* Wait to receive a byte */
    while (SPI_I2S_GetFlagStatus(SPI_RF22, SPI_I2S_FLAG_RXNE) == RESET) { ; }
    /* Return the byte read from the SPI bus */
    SPI_I2S_ReceiveData(SPI_RF22);// dummy read
    Set_Si4432_Nsel(Bit_SET);
}

void RF22::spiBurstRead(uint8_t reg, uint8_t* dest, uint8_t len)
{
    Set_Si4432_Nsel(Bit_RESET);
    SPI_I2S_SendData(SPI_RF22, reg & ~RF22_SPI_WRITE_MASK);// Send the address with the write mask off
    /* Wait to receive a byte */
    while (SPI_I2S_GetFlagStatus(SPI_RF22, SPI_I2S_FLAG_RXNE) == RESET) { ; }
    /* Return the byte read from the SPI bus */
    SPI_I2S_ReceiveData(SPI_RF22);
    while (len--) {
    	SPI_I2S_SendData(SPI_RF22, 0x00);// dummy write
    	/* Wait to receive a byte */
    	while (SPI_I2S_GetFlagStatus(SPI_RF22, SPI_I2S_FLAG_RXNE) == RESET) { ; }
    	/* Return the byte read from the SPI bus */
    	*(dest++) = SPI_I2S_ReceiveData(SPI_RF22);
    }
    Set_Si4432_Nsel(Bit_SET);
}

void RF22::spiBurstWrite(uint8_t reg, uint8_t* src, uint8_t len)
{
    Set_Si4432_Nsel(Bit_RESET);
    SPI_I2S_SendData(SPI_RF22, reg | RF22_SPI_WRITE_MASK);// Send the address with the write mask on
    /* Wait to receive a byte */
    while (SPI_I2S_GetFlagStatus(SPI_RF22, SPI_I2S_FLAG_RXNE) == RESET) { ; }
    /* Return the byte read from the SPI bus */
    SPI_I2S_ReceiveData(SPI_RF22);//dummy read
    while (len--) {
    	SPI_I2S_SendData(SPI_RF22, *(src++));// Send the data
    	/* Wait to receive a byte */
    	while (SPI_I2S_GetFlagStatus(SPI_RF22, SPI_I2S_FLAG_RXNE) == RESET) { ; }
    	/* Return the byte read from the SPI bus */
    	SPI_I2S_ReceiveData(SPI_RF22);//dummy read
    }
    Set_Si4432_Nsel(Bit_SET);
}
